--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 						<li><a class="page-scroll" href="#features">Refugees</a></li>
 						<li><a class="page-scroll" href="#features">Helpers</a></li>
                         <li><a class="page-scroll" href="#contact">Contact</a></li>
+						<li><a href="views/signup.html">Signup</a></li>
+						<li><a href="views/login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,10 +52,6 @@
                 <div class="carousel-caption">
                     <h1>Slogan<br/>
                         inês faz...</h1>
-                    <p>
-                        <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-                        <a class="caption-link" href="#" role="button">Inspinia Theme</a>
-                    </p>
                 </div>
             </div>
 			
