Signup, LogIn e Index decentes. Só falta mesmo colocar bons textos

--- a/index.html
+++ b/index.html
@@ -1,60 +1,86 @@
 <script src="../js/header.js"></script>
+
 <body id="page-top" class="landing-page no-skin-config">
 <div class="navbar-wrapper">
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header page-scroll">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Nome do site</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a class="page-scroll" href="#page-top">Home</a></li>
-                        <li><a class="page-scroll" href="#features">Description</a></li>
-                        <li><a class="page-scroll" href="#contact">Contact</a></li>
-						<li><a href="views/signup.html">Signup</a></li>
-						<li><a href="views/login.html">Login</a></li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="">OUR SITE</a>
             </div>
-        </nav>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="page-scroll" href="#page-top">Home</a></li>
+                    <li><a class="page-scroll" href="#features">Description</a></li>
+                    <li><a class="page-scroll" href="#contact">Contact</a></li>
+                    <li><a href="views/signup.html">Signup</a></li>
+                    <li><a href="views/login.html">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </div>
 
-    <div class="carousel-inner" role="listbox">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>Slogan<br/>
-                        inês faz...</h1>
-                </div>
-            </div>
-			
-            <!-- Set background for slide in css -->
-            <div class="header-back one"></div>
+<div class="carousel-inner" role="listbox">
+    <div class="container">
+        <div class="carousel-caption">
+            <h1>something</h1>
+        </div>
     </div>
-
-
+    <div class="header-back one"></div>
+</div>
 
 <section id="features" class="container services">
     <div class="row">
         <div class="col-sm-4">
             <h2>Who we are?</h2>
-            <p>Goals</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+            <p>
+                Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+            </p>
         </div>
         <div class="col-sm-4">
             <h2>Refugees</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+            <p>
+                Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+                vehicula ut id elit. Morbi leo risus.
+            </p>
+            <div class="row">
+                <div class="col-lg-12 text-center"><a href="views/signup.html" class="btn btn-primary">Sign Up</a></div>
+            </div>
         </div>
         <div class="col-sm-4">
             <h2>Helpers</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+            <p>
+                Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
+                vehicula ut id elit. Morbi leo risus.
+            </p>
+            <div class="row">
+                <div class="col-lg-12 text-center"><a href="views/signup.html" class="btn btn-primary">Sign Up</a></div>
+            </div>
         </div>
     </div>
 </section>
@@ -62,26 +88,18 @@
 
 <section id="contact" class="gray-section contact">
     <div class="container">
-        <div class="row m-b-lg">
+        <div class="row m-b-sm">
             <div class="col-lg-12 text-center">
                 <div class="navy-line"></div>
                 <h1>Contact Us</h1>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
             </div>
         </div>
-        <div class="row m-b-lg">
-            <div class="col-lg-3 col-lg-offset-3">
+        <div class="row m-b-sm">
+            <div class="col-lg-12 text-center">
                 <address>
-                    <strong><span class="navy">Company name, Inc.</span></strong><br/>
-                    795 Folsom Ave, Suite 600<br/>
-                    San Francisco, CA 94107<br/>
-                    <abbr title="Phone">P:</abbr> (123) 456-7890
+                    <strong><span class="navy">Level Up!, Inc.</span></strong><br/>
+                    Porto, Portugal<br/>
                 </address>
-            </div>
-            <div class="col-lg-4">
-                <p class="text-color">
-                    Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
-                </p>
             </div>
         </div>
         <div class="row">
@@ -101,8 +119,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                <p><strong>&copy; 2015 Company Name</strong><br/> consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <div class="col-lg-8 col-lg-offset-2 text-center m-t-sm m-b-sm">
+                <p><strong>&copy; 2017 Level Up!</strong>
             </div>
         </div>
     </div>
@@ -118,7 +136,6 @@
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
 <script src="js/plugins/wow/wow.min.js"></script>
-
 
 <script>
 
@@ -142,9 +159,9 @@
 
     var cbpAnimatedHeader = (function() {
         var docElem = document.documentElement,
-                header = document.querySelector( '.navbar-default' ),
-                didScroll = false,
-                changeHeaderOn = 200;
+            header = document.querySelector( '.navbar-default' ),
+            didScroll = false,
+            changeHeaderOn = 200;
         function init() {
             window.addEventListener( 'scroll', function( event ) {
                 if( !didScroll ) {
