--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 <section id="features" class="container services">
     <div class="row">
         <div class="col-sm-4">
-            <h2>Who we are?</h2>
-            <p>Goals</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+            <h2>Who are we?</h2>
+            <p>We're a team that has the objective of making this world a little bit better for the current and future generations of people.</p>
+            <p>Everyone needs help during their lifetime and one of the harshest things we can think of is people who are in need and not getting the help they deserve because of lack of means to aid them.</p>
+            <p>With this platform we wish to bring those means to every refugee around the globe and to anyone who wishes to help them.</p>
         </div>
         <div class="col-sm-4">
             <h2>Refugees</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+            <p>Any refugee who is in need of help or even wishes to help other fellow refugees is welcomed to join and stay on our platform. </p>
+            <p>The site provides the means to easily contact any person around the globe who is available to help you. </p>
         </div>
         <div class="col-sm-4">
             <h2>Helpers</h2>
             <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
         </div>
     </div>
 </section>
