--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
 </div>
 
 <div class="carousel-inner" role="listbox">
-    <div class="container">
-        <div class="carousel-caption">
-            <h1>something</h1>
-        </div>
-    </div>
-    <div class="header-back one"></div>
+    <div class="header-back mine"></div>
+    <i style="color: #1AB394; font-size: 3rem;padding-left: 8%">"If we have no peace, it is because we have forgotten that we belong to each other"</i>
+    <p style="color: #1AB394; font-size: 2rem;padding-left: 15%"> - Mother Teresa</p>
 </div>
 
 <section id="features" class="container services">
