--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">OUR SITE</a>
+                <a class="navbar-brand" href="">Refugees Co</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -28,14 +28,14 @@
 
 <div class="carousel-inner" role="listbox">
     <div class="header-back mine"></div>
-    <i style="color: #1AB394; font-size: 3rem;padding-left: 8%">"If we have no peace, it is because we have forgotten that we belong to each other"</i>
-    <p style="color: #1AB394; font-size: 2rem;padding-left: 15%"> - Mother Teresa</p>
+    <i style="color: #1AB394; font-size: 3rem;padding-left: 8%">"Leave the world better than you found it."</i>
+    <p style="color: #1AB394; font-size: 2rem;padding-left: 15%"> - Robert Baden-Powell</p>
 </div>
 
 <section id="features" class="container services">
     <div class="row">
         <div class="col-sm-4">
-            <h2>Who we are?</h2>
+            <h2>Who are we?</h2>
             <p>
                 Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
                 vehicula ut id elit. Morbi leo risus.
