--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">Refugees Co</a>
+                <a class="navbar-brand" href="">Inneed</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="page-scroll" href="#page-top">Home</a></li>
                     <li><a class="page-scroll" href="#features">Description</a></li>
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
-                    <li><a href="views/signup.html">Signup</a></li>
-                    <li><a href="views/login.html">Login</a></li>
+                    <li><a href="signup">Signup</a></li>
+                    <li><a href="login">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -44,12 +44,14 @@
             <h2>Refugees</h2>
             <p>Any refugee who is in need of help or even wishes to help other fellow refugees is welcomed to join and stay on our platform. </p>
             <p>The site provides the means to easily contact any person around the globe who is available to help you. </p>
-            <div class="col-lg-12 text-center"><a href="views/signup.html" class="btn btn-primary">Sign Up</a></div>
+            <p>Sign up now, if this description describe your current situation.</p>
+            <div class="col-lg-12 text-center"><a href="signup" class="btn btn-primary">Sign Up</a></div>
         </div>
         <div class="col-sm-4">
             <h2>Helpers</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <div class="col-lg-12 text-center"><a href="views/signup.html" class="btn btn-primary">Sign Up</a></div>
+            <p></p>
+            <p>Sign up now, if you are ready to help others.</p>
+            <div class="col-lg-12 text-center"><a href="signup" class="btn btn-primary">Sign Up</a></div>
         </div>
     </div>
 </section>
@@ -73,7 +75,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <a href="mailto:test@email.com" class="btn btn-primary">Send us mail</a>
+                <a href="mailto:levelup@email.com" class="btn btn-primary">Send us mail</a>
                 <p class="m-t-sm">
                     Or follow us on social platform
                 </p>
