--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
         <div class="col-sm-4">
             <h2>Helpers</h2>
-            <p></p>
-            <p>Sign up now, if you are ready to help others.</p>
+            <p>Anyone who wishes to help any person in need is always welcomed to take part on this platform.</p>
+			<p>If you are someone who wants to teach, provide services or even give fair jobs to refugees please join us!</p>
             <div class="col-lg-12 text-center"><a href="signup" class="btn btn-primary">Sign Up</a></div>
         </div>
     </div>
